--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-for-beginners2",
+  "name": "react-for-beginners",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
